# vision_finagent

./: .env  .env.example  .gitignore  Dockerfile  ISSUE_SUMMARY.md  README.md  SECOND_PASS_IMPLEMENTATION.md  probe_triton_spec.py  pyproject.toml  regression_compress.py  regression_round2.py  regression_second_pass.py  smoke_eval.py  start.py  start_server.py
docker/: docker-compose.milvus.yml  docker-compose.yml
scripts/: analyze_dataset.py  eval_retrieval.py  init_milvus.py
src/: __init__.py  config.py  main.py
src/core/: exception.py  milvus_client.py  redis_client.py
src/graph/: pipeline.py  state.py
src/graph/nodes/: __init__.py  retriever_node.py  rollback_node.py  validator_node.py  vlm_node.py
src/models/: enums.py  schema.py
src/routers/: health.py  reports.py
src/services/: audit_service.py  ingestion_service.py  retrieval_service.py  task_service.py  vlm_service.py
src/utils/: idempotency.py  image.py  lock.py
static/: index.html
stubs/triton/: __init__.py
stubs/triton/ops/: __init__.py  matmul_perf_model.py
tests/: conftest.py  qa_smoke_eval_playbook.md  run_tests.py  test_device_ready.py  test_idempotency.py  test_image_compress.py  test_ingestion.py  test_inventory.py  test_milvus_schema.py  test_query.py  test_retrieval_fallback.py  test_retrieval_filter.py  test_second_pass.py  test_sessions.py  test_stream_image_regression.py  test_upload.py  test_vlm_prompt.py
