[tool.poetry]
name = "vision-finagent"
version = "0.1.0"
description = "Multimodal Financial Report Analysis Assistant"
authors = ["team"]
packages = [
    { include = "vision_finagent" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110"
uvicorn = {extras = ["standard"], version = "*"}
langgraph = "^1.0"
pymilvus = ">=2.4"
redis = {extras = ["hiredis"], version = "*"}
python-multipart = "*"
pillow = "*"
torch = ">=2.3.1,<2.8"
colpali-engine = ">=0.3.4,<0.3.7"
transformers = ">=4.46.1,<4.47"
accelerate = ">=0.34.0,<0.36"
bitsandbytes = ">=0.43.0,<0.45"
openai = "*"
pydantic-settings = "*"
structlog = "*"
python-dotenv = "*"
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
anyio = {extras = ["trio"], version = ">=4.0"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
